Learn more, open new tab

--- a/queensofgoodness/about.html
+++ b/queensofgoodness/about.html
@@ -31,7 +31,7 @@
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel=canonical href="https://queensofgoodness.com/index.html">
+    <link rel=canonical href="https://queensofgoodness.com/about.html">
     <link rel="shortcut icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
 
@@ -136,18 +136,18 @@
           </div>
         </div>
       </div>
-      <div class="row row-cols-2 g-3">
+      <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
           <div class="card h-100" id="ShopLocal" style="background-color: #f1dfc5;">
             <div class="card-header text-center">Shop Local</div>
             <div class="card-body text-center">
-              <a href="https://eatwyoming.com">
+              <a href="https://eatwyoming.com" target="_blank" rel="noopener noreferrer">
                 <img src="static/img/EatWyoLogo-1.png" class="img-fluid" width=50%>
               </a>
-              <a href="https://meadowlarklander.org">
+              <a href="https://meadowlarklander.org" target="_blank" rel="noopener noreferrer">
                 <img src="static/img/MeadowlarkLogo-Final.png" class="img-fluid">
               </a>
-              <a href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">
+              <a href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/" target="_blank" rel="noopener noreferrer">
                 <img src="static/img/FremontLocal.png" class="img-fluid" width=75%>
               </a>
             </div>
@@ -157,34 +157,34 @@
           <div class="card h-100" style="background-color: #f1dfc5;">
             <div class="card-header text-center">Support Pollinators</div>
             <div class="card-body">
+              <h5 class="text-center">1% of profits to support pollinators & outreach</h5>
               <table>
                 <tr>
                   <td>
-                    <a href="https://www.xerces.org">
+                    <a href="https://www.xerces.org" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/XS-2024-web-logo.png" class="img-fluid" width=50%>
                     </a>
                   </td>
                   <td>
-                    <a href="https://www.pollinatorstewardship.org">
+                    <a href="https://www.pollinatorstewardship.org" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/Pollinator%20Stewardship%20Council.png" class="img-fluid">
                     </a>
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <a href="https://www.projectapism.org">
+                    <a href="https://www.projectapism.org" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/PAmlogotype.png" class="img-fluid" width=70%>
                     </a>
                   </td>
                   <td>
-                    <a href="https://www.pollinator.org">
+                    <a href="https://www.pollinator.org" target="_blank" rel="noopener noreferrer">
                       <img src="static/img/PollinatorLogo-Tag2@2x.png" class="img-fluid">
                     </a>
                   </td>
                 </tr>
               </table>
             </div>
-            <div class="card-footer">1% of profits to support pollinators & outreach<div>
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 g-3">
           <div class="col">
             <h5 class="mb-4">Quick Links</h5>
             <ul class="list-unstyled">
