--- a/queensofgoodness/honey.html
+++ b/queensofgoodness/honey.html
@@ -31,7 +31,7 @@
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel=canonical href="https://queensofgoodness.com/index.html">
+    <link rel=canonical href="https://queensofgoodness.com/honey.html">
     <link rel="shortcut icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
 
@@ -202,7 +202,7 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 g-3">
           <div class="col">
             <h5 class="mb-4">Quick Links</h5>
             <ul class="list-unstyled">
