--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -264,7 +264,7 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 g-3">
           <div class="col">
             <h5 class="mb-4">Quick Links</h5>
             <ul class="list-unstyled">
