--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -31,7 +31,7 @@
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel=canonical href="https://queensofgoodness.com/index.html">
+    <link rel=canonical href="https://queensofgoodness.com/products.html">
     <link rel="shortcut icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
 
@@ -101,7 +101,7 @@
   </nav>
 
   <body>
-    <div class="container-xl" id="hero"">
+    <div class="container-xl" id="hero">
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <div class="col">
           <div class="card h-100" style="background-color: #e6a322;">
@@ -114,18 +114,18 @@
             <div class="card-body">
               <ul class="card-text">
                 <li>Unfiltered and never heated</li>
-                <li>Everything from the bee's honey</li>
+                <li>Everything from the bee's own honey</li>
                 <li>Nutritious freeze-dried whole fruits</li>
                 <li>Fair trade and single origin spices</li>
                 <li>Creamed to be silky and spreadable</li>
-                <li>Hand crafted, small batch</li>
+                <li>Hand crafted in small batches</li>
               </ul>
             </div>
           </div>
         </div>
       </div>
       <div class="row">
-        <h2 class="bolder text-center">Premium Creamed Raw Honey<br> Hand-crafted to nourish both body and spirit</h2>
+        <h2 class="bolder text-center">Hand-crafted to nourish body and spirit</h2>
       </div>
 
       <div class="row row-cols-2 row-cols-md-3 row-cols-xl-6 g-3">
@@ -167,6 +167,13 @@
         </div>
       </div>
 
+      <div class="row g-3">
+        <div class="card bl-card">
+          <div class="card-header">
+            <h4>Indulge in Nature's Finest Blends</h4>
+          <div>
+        </div>
+      </div>
       <div class="row">
         <h4 class="bolder text-center">Raw Local Honey & Premium Ingredients<br>
           -- nutritious freeze-dried whole fruits --<br>
@@ -287,7 +294,7 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 g-3">
           <div class="col">
             <h5 class="mb-4">Quick Links</h5>
             <ul class="list-unstyled">
