--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -31,7 +31,7 @@
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel=canonical href="https://queensofgoodness.com/index.html">
+    <link rel=canonical href="https://queensofgoodness.com/shop.html">
     <link rel="shortcut icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
 
@@ -108,13 +108,13 @@
           <div class="card h-100" id="ShopLocal" style="background-color: #f1dfc5;">
             <div class="card-header text-center">Shop Local</div>
             <div class="card-body text-center">
-              <a href="https://eatwyoming.com">
+              <a href="https://eatwyoming.com" target="_blank" rel="noopener noreferrer">
                 <img src="static/img/EatWyoLogo-1.png" class="img-fluid" width=50%>
               </a>
-              <a href="https://meadowlarklander.org">
+              <a href="https://meadowlarklander.org" target="_blank" rel="noopener noreferrer">
                 <img src="static/img/MeadowlarkLogo-Final.png" class="img-fluid">
               </a>
-              <a href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">
+              <a href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/" target="_blank" rel="noopener noreferrer">
                 <img src="static/img/FremontLocal.png" class="img-fluid" width=75%>
               </a>
             </div>
@@ -134,7 +134,7 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 g-0">
           <div class="col">
             <h5 class="mb-4">Quick Links</h5>
             <ul class="list-unstyled">
@@ -146,9 +146,9 @@
           </div>
           <div class="col">
             <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="48" alt=""></h5>
-            <p>Raw Local Honey & Premium Ingredients<br>
-              -- nutritious freeze-dried whole fruits --<br>
-              -- fair-trade and single origin spices --</p>
+            <p>Raw Local Honey<br>
+               Nutritious freeze-dried whole fruits<br>
+               Fair-trade and single origin spices</p>
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
               <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
