--- a/queensofgoodness/bees.html
+++ b/queensofgoodness/bees.html
@@ -31,7 +31,7 @@
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel=canonical href="https://queensofgoodness.com/index.html">
+    <link rel=canonical href="https://queensofgoodness.com/bees.html">
     <link rel="shortcut icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://queensofgoodness.com/static/img/favicon.ico">
 
@@ -111,11 +111,13 @@
             <div class="card-body">
               <h5 class="card-title text-center">Beekeeping Classes & Events</h5>
               <ul class="card-text">
-                <li>Introductory and intermediate</li>
+                <li>Introductory and intermediate classes</li>
                 <li>School Programs - demonstration hive</li>
                 <li>National Honey Bee Day, Ag and Garden Expos</li>
               </ul>
-              <a class="learn-more" href="honey.html">Learn More</a>
+              <div class="container text-center">
+                <a class="learn-more" href="honey.html">Learn More</a>
+              </div>
             </div>
           </div>
         </div>
@@ -126,8 +128,10 @@
             <div class="card-body">
               <h5 class="card-title text-center">Honey is More Than Delicious</h5>
               <p class="card-text">
-                Honey - local honey - raw honey - pure honey - organic honey - imported honey - monofloral honey - crystallized honey - creamed honey</p>
-              <a class="learn-more" href="honey.html">Learn More</a>
+                Honey - local honey - raw honey - pure honey - organic honey - imported honey - monofloral honey - wildflower honey - crystallized honey - creamed honey</p>
+              <div class="container text-center">
+                <a class="learn-more" href="honey.html">Learn More</a>
+              </div>
             </div>
           </div>
         </div>
@@ -202,7 +206,7 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 g-3">
           <div class="col">
             <h5 class="mb-4">Quick Links</h5>
             <ul class="list-unstyled">
