Relayout and remove inline styles

--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -102,9 +102,9 @@
 
   <body>
     <div class="container-xl" id="hero">
-      <div class="row row-cols-1 row-cols-md-2 g-3">
+      <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
-          <div class="card h-100" style="background-color: #e6a322;">
+          <div class="card tg-card h-100">
             <img class="card-img-top" src="static/img/Display.jpg" alt="Product display">
           </div>
         </div>
@@ -115,8 +115,6 @@
               <ul class="card-text">
                 <li>Unfiltered and never heated</li>
                 <li>Everything from the bee's own honey</li>
-                <li>Nutritious freeze-dried whole fruits</li>
-                <li>Fair trade and single origin spices</li>
                 <li>Creamed to be silky and spreadable</li>
                 <li>Hand crafted in small batches</li>
               </ul>
@@ -124,91 +122,52 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <h2 class="bolder text-center">Hand-crafted to nourish body and spirit</h2>
-      </div>
-
-      <div class="row row-cols-2 row-cols-md-3 row-cols-xl-6 g-3">
-        <div class="col">
-          <div class="card h-100" style="background-color: #e6a322;">
-            <div class="card-header text-center">Turmeric Ginger</div>
-            <img class="card-img-top" src="static/img/TG.jpg" alt="Golden Milk">
+      <div class="row row-cols-1 row-cols-sm-2 g-3">
+        <div class="col-sm-6 order-sm-2">
+          <div class="card tg-card h-100">
+            <img class="card-img-top" src="static/img/Product%20stack.jpg" alt="Product stack">
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100" style="background-color: #d07ee3;">
-            <div class="card-header text-center">Elderberry</div>
-            <img class="card-img-top" src="static/img/E.jpg" alt="Elderberry">
+        <div class="col-sm-6 order-sm-1">
+          <div class="card bl-card h-100">
+            <div class="card-header text-center">Indulge in Nature's Finest Blends</div>
+            <div class="card-body">
+              <ul class="card-text">
+                <li>Raw local honey</li>
+                <li>Fair trade and single origin spices</li>
+                <li>Nutritious freeze-dried whole fruits</li>
+                <li>Clean label & ethically sourced</li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100" style="background-color: #a5d14a;">
-            <div class="card-header text-center">Ginger</div>
-            <img class="card-img-top" src="static/img/G.jpg" alt="Ginger">
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100" style="background-color: #ff761e;">
-            <div class="card-header text-center">Pumpkin Spice</div>
-            <img class="card-img-top" src="static/img/PS.jpg" alt="Pumpkin Spice">
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100" style="background-color: #8192fe;">
-            <div class="card-header text-center">Blueberry Lemon</div>
-            <img class="card-img-top" src="static/img/BL.jpg" alt="Blueberry Lemon">
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100" style="background-color: #ffda52;">
-            <div class="card-header text-center">Lemon</div>
-            <img class="card-img-top" src="static/img/L.jpg" alt="Lemon">
-          </div>
-        </div>
-      </div>
-
-      <div class="row g-3">
-        <div class="card bl-card">
-          <div class="card-header">
-            <h4>Indulge in Nature's Finest Blends</h4>
-          <div>
-        </div>
-      </div>
-      <div class="row">
-        <h4 class="bolder text-center">Raw Local Honey & Premium Ingredients<br>
-          -- nutritious freeze-dried whole fruits --<br>
-          -- fair-trade and single origin spices --</h4>
       </div>
 
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
         <div class="col" id="TG">
-          <div class="card h-100" style="background-color: #e6a322;">
+          <div class="card tg-card h-100">
             <div class="card-header text-center">Turmeric Ginger</div>
             <img class="card-img-top" src="static/img/Golden%20Milk.jpg" alt="Golden Milk">
             <div class="card-body">
               <h5 class="card-title text-center">Golden Milk</h5>
               <ul class="card-text">
-                <li>Simply stir a spoonful into your favorite hot beverage to make a delicious Golden Milk Latte</li>
-              </ul>
-              <ul class="card-text">
+                <li>Make a delicious Golden Milk Latte by just adding a spoonful to a hot beverage</li>
                 <li>Add spice and sweetness to your oatmeal or hot cereal</li>
                 <li>Spread it on toast, grahams or waffles</li>
-                <li>Use it in glazes, marinades and cooking</li>
+                <li>Use it in glazes and stirfry</li>
               </ul>
               <p><b>INGREDIENTS:</b> raw honey, turmeric, ginger, cinnamon, pepper</p>
             </div>
           </div>
         </div>
         <div class="col" id="E">
-          <div class="card h-100" style="background-color: #d07ee3;">
+          <div class="card e-card h-100">
             <div class="card-header text-center">Elderberry</div>
             <img class="card-img-top" src="static/img/2.jpg" alt="Elderberry">
             <div class="card-body">
               <h5 class="card-title text-center">Elderberry Tea</h5>
               <ul class="card-text">
                 <li>Stir a spoonful into your favorite hot beverage</li>
-              </ul>
-              <ul class="card-text">
                 <li>Add a berry boost to your hot drink, oatmeal or hot cereal</li>
                 <li>Spread it on toast, pancakes or waffles</li>
                 <li>Make a soothing tonic</li>
@@ -218,15 +177,13 @@
           </div>
         </div>
         <div class="col" id="G">
-          <div class="card h-100" style="background-color: #a5d14a;">
+          <div class="card g-card h-100">
             <div class="card-header text-center">Ginger</div>
             <img class="card-img-top" src="static/img/4.jpg" alt="Ginger">
             <div class="card-body">
               <h5 class="card-title text-center">Ginger Tea</h5>
               <ul class="card-text">
                 <li>Stir a spoonful into your favorite tea or hot water</li>
-              </ul>
-              <ul class="card-text">
                 <li>Spread on biscuits, bagels or waffles</li>
                 <li>Make a simple syrup or salad dressing</li>
                 <li>Use it in glazes, pair with cheese</li>
@@ -236,15 +193,13 @@
           </div>
         </div>
         <div class="col" id="PS">
-          <div class="card h-100" style="background-color: #ff761e;">
+          <div class="card ps-card h-100">
             <div class="card-header text-center">Pumpkin Spice</div>
             <img class="card-img-top" src="static/img/Toast.jpeg" alt="Pumpkin Spice">
             <div class="card-body">
               <h5 class="card-title text-center">Pumpkin Spice Chai</h5>
               <ul class="card-text">
                 <li>Use a little to make your favorite hot chai</li>
-              </ul>
-              <ul class="card-text">
                 <li>Add spice and sweetness to your oatmeal or hot cereal</li>
                 <li>Spread on biscuits, bagels or waffles</li>
                 <li>Use as icing, pair with apples or cheese</li>
@@ -254,15 +209,13 @@
           </div>
         </div>
         <div class="col" id="BL">
-          <div class="card h-100" style="background-color: #8192fe;">
+          <div class="card b-card h-100">
             <div class="card-header text-center">Blueberry Lemon</div>
             <img class="card-img-top" src="static/img/BlueberryTea.jpeg" alt="Blueberry Lemon">
             <div class="card-body">
               <h5 class="card-title text-center">Blueberry Apples</h5>
               <ul class="card-text">
                 <li>Try it with apples or cheese</li>
-              </ul>
-              <ul class="card-text">
                 <li>Spread on biscuits, bagels or waffles</li>
                 <li>Add a berry boost to your hot drink, oatmeal or hot cereal</li>
                 <li>Use it in glazes, or as icing</li>
@@ -272,15 +225,13 @@
           </div>
         </div>
         <div class="col" id="L">
-          <div class="card h-100" style="background-color: #ffda52;">
+          <div class="card l-card h-100">
             <div class="card-header text-center">Lemon</div>
             <img class="card-img-top" src="static/img/3.jpg" alt="Lemon">
             <div class="card-body">
               <h5 class="card-title text-center">Lemon Tea</h5>
               <ul class="card-text">
                 <li>Stir a spoonful into your favorite tea or hot water</li>
-              </ul>
-              <ul class="card-text">
                 <li>Spread on biscuits, bagels or waffles</li>
                 <li>Make a simple syrup or salad dressing</li>
                 <li>Use it in glazes, pair with cheese</li>
