Remove inline styles, text cleanup, fix index span issue

--- a/queensofgoodness/bees.html
+++ b/queensofgoodness/bees.html
@@ -115,9 +115,9 @@
                 <li>School Programs - demonstration hive</li>
                 <li>National Honey Bee Day, Ag and Garden Expos</li>
               </ul>
-              <div class="container text-center">
-                <a class="learn-more" href="honey.html">Learn More</a>
-              </div>
+            </div>
+            <div class="card-footer text-center">
+              <a class="learn-more" href="honey.html">Learn More</a>
             </div>
           </div>
         </div>
@@ -129,16 +129,16 @@
               <h5 class="card-title text-center">Honey is More Than Delicious</h5>
               <p class="card-text">
                 Honey - local honey - raw honey - pure honey - organic honey - imported honey - monofloral honey - wildflower honey - crystallized honey - creamed honey</p>
-              <div class="container text-center">
-                <a class="learn-more" href="honey.html">Learn More</a>
-              </div>
+            </div>
+            <div class="card-footer text-center">
+              <a class="learn-more" href="honey.html">Learn More</a>
             </div>
           </div>
         </div>
       </div>
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <div class="col">
-          <div class="card h-100" style="background-color: #ffda52;">
+          <div class="card l-card h-100">
             <div class="card-header text-center">Bee or Wasp?</div>
             <img class="card-img-top" src="static/img/Yellow_Jacket_photo_by_William_Ray_Martin.jpg" alt="Card image">
             <div class="card-body">
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100" style="background-color: #e6a322;">
+          <div class="card tg-card h-100">
             <div class="card-header text-center">Honey Bees</div>
             <img class="card-img-top" src="static/img/Apis_mellifera_su_foglia_di_alloro.jpg" alt="Card image">
             <div class="card-body">
@@ -237,7 +237,6 @@
             <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
           </div>
         </div>
-      </div>
       </div>
     </footer>
 
