--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -104,35 +104,52 @@
     <div class="container-xl" id="hero">
       <div class="row g-3">
         <div class="image-container">
-          <img src="static/img/Purple%20flower%20bee.jpg" class="img-fluid img-center">
+          <img src="static/img/Purple%20flower%20bee.jpg" class="img-fluid">
           <div class="overlay-text-ul">
-            <h2>Raw Wyoming Honey</h2>
+            <h2>Pure Wyoming Honey</h2>
           </div>
         </div>
       </div>
+      <div class="row row-cols-1 row-cols-md-3 g-3">
+        <div class="col-md-4">
+          <div class="card bl-card h-100">
+            <div class="card-header text-center">Premium Creamed Raw Honey</div>
+            <div class="card-body">
+              <p class="card-text">
+                We begin with raw local honey sourced from our trusted beekeepers. Using a week long
+                crystallization process, we transform it into a creamy, spreadable honey. Then,
+                we add premium fair-trade spices and nutritious freeze-dried fruits to create
+                our unique blends.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div class="card tg-card h-100">
+            <div class="card-body">
+              <img class="card-img-top" src="static/img/Product%20stack.jpg" alt="Product stack">
+            </div>
+            <div class="card-footer text-center">
+              <a class="learn-more" href="products.html">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <h2 class="bolder text-center">Raw Local Honey</h2>
+      </div>
       <div class="row g-3">
         <div class="image-container">
-          <img src="static/img/Colorful%20hives.jpg" class="img-fluid img-center">
+          <img src="static/img/Colorful%20hives.jpg" class="img-fluid img-banner">
           <div class="overlay-text-ll">
             <h2>From the Hive to Your Table</h2>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <h2 class="bolder text-center">Discover Our Premium Creamed Raw Honey</h2>
-      </div>
-      <div class="row g-3">
-        <div class="image-container">
-          <a href="products.html">
-            <img src="static/img/Product%20stack.jpg" class="img-fluid img-center">
-          </a>
         </div>
       </div>
 
       <div class="row">
         <h2 class="bolder text-center">Hand-crafted to Nourish Body & Spirit</h2>
       </div>
-
       <div class="row row-cols-2 g-3">
         <div class="col">
           <img src="static/img/Toast.jpeg" class="img-fluid img-center">
@@ -143,14 +160,14 @@
       </div>
 
       <div class="row">
-        <h2 class="bolder text-center">Raw Local Honey & Premium Ingredients<br>
-          -- nutritious freeze-dried whole fruits --<br>
-          -- fair-trade & single origin spices --</h2>
+        <h2 class="bolder text-center">Premium Ingredients<br>
+          -- fair-trade & single origin spices --<br>
+          -- nutritious freeze-dried whole fruits --</h2>
       </div>
 
-      <div class="row row-cols-2 row-cols-lg-3 row-cols-xl-6 g-3">
+      <div class="row row-cols-2 g-3">
         <div class="col">
-          <img src="static/img/1.jpg" class="img-fluid img-center">
+          <img src="static/img/Golden%20milk%20with%20spices.jpg" class="img-fluid img-center">
         </div>
         <div class="col">
           <img src="static/img/5.jpg" class="img-fluid img-center">
@@ -160,12 +177,6 @@
         </div>
         <div class="col">
           <img src="static/img/3.jpg" class="img-fluid img-center">
-        </div>
-        <div class="col">
-          <img src="static/img/Golden%20Milk.jpg" class="img-fluid img-center">
-        </div>
-        <div class="col">
-          <img src="static/img/7.jpg" class="img-fluid img-center">
         </div>
       </div>
 
@@ -187,51 +198,51 @@
       </div>
 
 
-      <div class="row row-cols-2 row-cols-md-3 row-cols-xl-6 g-3">
-        <div class="col">
-          <a href="products.html#TG">
-            <div class="card" style="background-color: #e6a322;">
-              <div class="card-header text-center">Turmeric Ginger</div>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+        <div class="col img-hover">
+          <div class="card tg-card img-hover">
+            <a href="products.html#TG" class="text-decoration-none">
+              <div class="card-header card-link text-center">Turmeric Ginger</div>
               <img class="card-img-top" src="static/img/TG.jpg" alt="Golden Milk">
-            </div>
-          </a>
+            </a>
+          </div>
         </div>
         <div class="col">
-          <a href="products.html#TG">
-            <div class="card" style="background-color: #d07ee3;">
-              <div class="card-header text-center">Elderberry</div>
+          <a href="products.html#E" class="text-decoration-none">
+            <div class="card e-card img-hover">
+              <div class="card-header card-link text-center">Elderberry</div>
               <img class="card-img-top" src="static/img/E.jpg" alt="Elderberry">
             </div>
           </a>
         </div>
         <div class="col">
-          <a href="products.html#G">
-            <div class="card" style="background-color: #a5d14a;">
-              <div class="card-header text-center">Ginger</div>
+          <a href="products.html#G" class="text-decoration-none">
+            <div class="card g-card img-hover">
+              <div class="card-header card-link text-center">Ginger</div>
               <img class="card-img-top" src="static/img/G.jpg" alt="Ginger">
             </div>
           </a>
         </div>
         <div class="col">
-          <a href="products.html#PS">
-            <div class="card" style="background-color: #ff761e;">
-              <div class="card-header text-center">Pumpkin Spice</div>
+          <a href="products.html#PS" class="text-decoration-none">
+            <div class="card ps-card img-hover">
+              <div class="card-header card-link text-center">Pumpkin Spice</div>
               <img class="card-img-top" src="static/img/PS.jpg" alt="Pumpkin Spice">
             </div>
           </a>
         </div>
         <div class="col">
-          <a href="products.html#BL">
-            <div class="card" style="background-color: #8192fe;">
-              <div class="card-header text-center">Blueberry Lemon</div>
+          <a href="products.html#BL" class="text-decoration-none">
+            <div class="card b-card img-hover">
+              <div class="card-header card-link text-center">Blueberry Lemon</div>
               <img class="card-img-top" src="static/img/BL.jpg" alt="Blueberry Lemon">
             </div>
           </a>
         </div>
         <div class="col">
-          <a href="products.html#L">
-            <div class="card" style="background-color: #ffda52;">
-              <div class="card-header text-center">Lemon</div>
+          <a href="products.html#L" class="text-decoration-none">
+            <div class="card l-card img-hover">
+              <div class="card-header card-link text-center">Lemon</div>
               <img class="card-img-top" src="static/img/L.jpg" alt="Lemon">
             </div>
           </a>
@@ -240,22 +251,28 @@
 
       <div class="row row-cols-2 g-3">
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <div class="card-header text-center">Education & Events</div>
             <div class="card-body">
               <a href="bees.html">
                 <img src="static/img/HoneyBeeDay24.jpeg" class="img-fluid">
               </a>
             </div>
+            <div class="card-footer text-center">
+              <a class="learn-more" href="bees.html">Learn More</a>
+            </div>
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <div class="card-header text-center">Know Your Honey</div>
             <div class="card-body">
               <a href="honey.html">
                 <img src="static/img/Jars%20of%20Honey.jpg" class="img-fluid">
               </a>
+            </div>
+            <div class="card-footer text-center">
+              <a class="learn-more" href="honey.html">Learn More</a>
             </div>
           </div>
         </div>
@@ -295,7 +312,6 @@
             <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
           </div>
         </div>
-      </div>
       </div>
     </footer>
 
