--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -154,7 +154,7 @@
                 <li>Make a delicious Golden Milk Latte by just adding a spoonful to a hot beverage</li>
                 <li>Add spice and sweetness to your oatmeal or hot cereal</li>
                 <li>Spread it on toast, grahams or waffles</li>
-                <li>Use it in glazes and stirfry</li>
+                <li>Use it in glazes and stir-fry</li>
               </ul>
               <p><b>INGREDIENTS:</b> raw honey, turmeric, ginger, cinnamon, pepper</p>
             </div>
@@ -276,7 +276,6 @@
             <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
           </div>
         </div>
-      </div>
       </div>
     </footer>
 
