--- a/queensofgoodness/shop.html
+++ b/queensofgoodness/shop.html
@@ -105,7 +105,7 @@
 
       <div class="row row-cols-1 row-cols-md-2 g-3">
         <div class="col">
-          <div class="card h-100" id="ShopLocal" style="background-color: #f1dfc5;">
+          <div class="card h-100" id="ShopLocal">
             <div class="card-header text-center">Shop Local</div>
             <div class="card-body text-center">
               <a href="https://eatwyoming.com" target="_blank" rel="noopener noreferrer">
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100" style="background-color: #f1dfc5;">
+          <div class="card h-100">
             <div class="card-header text-center">Lander Farmers Market</div>
             <div class="card-body text-center">
               <img src="static/img/Display.jpg" class="img-fluid">
@@ -147,8 +147,8 @@
           <div class="col">
             <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="48" alt=""></h5>
             <p>Raw Local Honey<br>
-               Nutritious freeze-dried whole fruits<br>
-               Fair-trade and single origin spices</p>
+              Nutritious freeze-dried whole fruits<br>
+              Fair-trade and single origin spices</p>
             <div class="social-links">
               <a href="https://www.facebook.com/profile.php?id=61556597102293" class="social-icon bg-primary"><i class="fab fa-facebook-f fa-lg"></i></a>
               <a href="https://instagram.com/QueensofGoodness" class="social-icon bg-danger"><i class="fab fa-instagram fa-lg"></i></a>
@@ -165,7 +165,6 @@
             <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
           </div>
         </div>
-      </div>
       </div>
     </footer>
 
