--- a/queensofgoodness/about.html
+++ b/queensofgoodness/about.html
@@ -138,7 +138,7 @@
       </div>
       <div class="row row-cols-1 row-cols-sm-2 g-3">
         <div class="col">
-          <div class="card h-100" id="ShopLocal" style="background-color: #f1dfc5;">
+          <div class="card h-100" id="ShopLocal">
             <div class="card-header text-center">Shop Local</div>
             <div class="card-body text-center">
               <a href="https://eatwyoming.com" target="_blank" rel="noopener noreferrer">
@@ -154,10 +154,9 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100" style="background-color: #f1dfc5;">
+          <div class="card h-100">
             <div class="card-header text-center">Support Pollinators</div>
             <div class="card-body">
-              <h5 class="text-center">1% of profits to support pollinators & outreach</h5>
               <table>
                 <tr>
                   <td>
@@ -185,8 +184,7 @@
                 </tr>
               </table>
             </div>
-              </div>
-            </div>
+            <div class="card-footer">1% of profits donated for pollinators & outreach</div>
           </div>
         </div>
       </div>
@@ -225,7 +223,6 @@
             <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
           </div>
         </div>
-      </div>
       </div>
     </footer>
 
